--- a/Resources/Prototypes/Corvax/Entities/Mobs/Customization/Markings/cat_parts.yml
+++ b/Resources/Prototypes/Corvax/Entities/Mobs/Customization/Markings/cat_parts.yml
@@ -3,7 +3,7 @@
   bodyPart: HeadTop
   markingCategory: HeadTop
   speciesRestriction: [Human]
-  sponsorOnly: false # c4llv07e WL
+  sponsorOnly: true 
   coloring:
     default:
       type:
@@ -27,7 +27,7 @@
   bodyPart: HeadTop
   markingCategory: HeadTop
   speciesRestriction: [Human]
-  sponsorOnly: false # c4llv07e WL
+  sponsorOnly: true 
   coloring:
     default:
       type:
@@ -51,7 +51,7 @@
   bodyPart: HeadTop
   markingCategory: HeadTop
   speciesRestriction: [Human]
-  sponsorOnly: false # c4llv07e WL
+  sponsorOnly: true 
   coloring:
     default:
       type:
@@ -75,7 +75,7 @@
   bodyPart: Tail
   markingCategory: Tail
   speciesRestriction: [Human]
-  sponsorOnly: false # c4llv07e WL
+  sponsorOnly: True 
   coloring:
     default:
       type:
