--- a/Resources/Prototypes/Corvax/Entities/Mobs/Customization/Markings/fox_parts.yml
+++ b/Resources/Prototypes/Corvax/Entities/Mobs/Customization/Markings/fox_parts.yml
@@ -3,7 +3,7 @@
   bodyPart: HeadTop
   markingCategory: HeadTop
   speciesRestriction: [Human]
-  sponsorOnly: false # c4llv07e WL
+  sponsorOnly: True 
   sprites:
   - sprite: Corvax/Mobs/Customization/fox_parts.rsi
     state: ears_fox_outer
