--- a/Resources/Prototypes/Recipes/Cooking/meal_recipes.yml
+++ b/Resources/Prototypes/Recipes/Cooking/meal_recipes.yml
@@ -1951,3 +1951,14 @@
     FoodTomato: 1
     FoodCabbage: 1
     FoodOnionSlice: 2
+
+- type: microwaveMealRecipe
+  id: RecipeSushi
+  name: рецепт суши
+  result: FoodMealSushi
+  time: 5
+  reagents:
+    Rice: 5
+  solids:
+    FoodPlateSmall: 1
+    FoodMeatFish: 1
