--- a/Resources/Prototypes/Recipes/Cooking/meal_recipes.yml
+++ b/Resources/Prototypes/Recipes/Cooking/meal_recipes.yml
@@ -1952,13 +1952,13 @@
     FoodCabbage: 1
     FoodOnionSlice: 2
 
-- type: microwaveMealRecipe
-  id: RecipeSushi
-  name: рецепт суши
-  result: FoodMealSushi
-  time: 5
-  reagents:
-    Rice: 5
-  solids:
-    FoodPlateSmall: 1
-    FoodMeatFish: 1
+#- type: microwaveMealRecipe
+#  id: RecipeSushi
+#  name: рецепт суши
+#  result: FoodMealSushi
+#  time: 5
+#  reagents:
+#    Rice: 5
+#  solids:
+#    FoodPlateSmall: 1
+#    FoodMeatFish: 1
