--- a/Resources/Prototypes/Entities/Mobs/Customization/Markings/reptilian.yml
+++ b/Resources/Prototypes/Entities/Mobs/Customization/Markings/reptilian.yml
@@ -2,7 +2,7 @@
   id: LizardFrillsAquatic
   bodyPart: HeadSide
   markingCategory: HeadSide
-  sponsorOnly: true
+  sponsorOnly: false
   speciesRestriction: [Reptilian]
   sprites:
   - sprite: Mobs/Customization/reptilian_parts.rsi
@@ -12,7 +12,7 @@
   id: LizardFrillsShort
   bodyPart: HeadSide
   markingCategory: HeadSide
-  sponsorOnly: true
+  sponsorOnly: false
   speciesRestriction: [Reptilian]
   sprites:
   - sprite: Mobs/Customization/reptilian_parts.rsi
@@ -22,7 +22,7 @@
   id: LizardFrillsSimple
   bodyPart: HeadSide
   markingCategory: HeadSide
-  sponsorOnly: true
+  sponsorOnly: false
   speciesRestriction: [Reptilian]
   sprites:
   - sprite: Mobs/Customization/reptilian_parts.rsi
@@ -32,7 +32,7 @@
   id: LizardFrillsDivinity
   bodyPart: HeadSide
   markingCategory: HeadSide
-  sponsorOnly: true
+  sponsorOnly: false
   speciesRestriction: [Reptilian]
   sprites:
   - sprite: Mobs/Customization/reptilian_parts.rsi
@@ -42,7 +42,7 @@
   id: LizardFrillsBig
   bodyPart: HeadSide
   markingCategory: HeadSide
-  sponsorOnly: true
+  sponsorOnly: false
   speciesRestriction: [Reptilian]
   sprites:
   - sprite: Mobs/Customization/reptilian_parts.rsi
@@ -52,7 +52,7 @@
   id: LizardFrillsAxolotl
   bodyPart: HeadSide
   markingCategory: HeadSide
-  sponsorOnly: true
+  sponsorOnly: false
   speciesRestriction: [Reptilian]
   sprites:
   - sprite: Mobs/Customization/reptilian_parts.rsi
@@ -62,7 +62,7 @@
   id: LizardFrillsHood
   bodyPart: HeadSide
   markingCategory: HeadSide
-  sponsorOnly: true
+  sponsorOnly: false
   speciesRestriction: [Reptilian]
   sprites:
   - sprite: Mobs/Customization/reptilian_parts.rsi
@@ -74,7 +74,7 @@
   id: LizardHornsAngler
   bodyPart: HeadTop
   markingCategory: HeadTop
-  sponsorOnly: true
+  sponsorOnly: false
   speciesRestriction: [Reptilian]
   sprites:
   - sprite: Mobs/Customization/reptilian_parts.rsi
@@ -84,7 +84,7 @@
   id: LizardHornsCurled
   bodyPart: HeadTop
   markingCategory: HeadTop
-  sponsorOnly: true
+  sponsorOnly: false
   speciesRestriction: [Reptilian]
   sprites:
   - sprite: Mobs/Customization/reptilian_parts.rsi
@@ -94,7 +94,7 @@
   id: LizardHornsRam
   bodyPart: HeadTop
   markingCategory: HeadTop
-  sponsorOnly: true
+  sponsorOnly: false
   speciesRestriction: [Reptilian]
   sprites:
   - sprite: Mobs/Customization/reptilian_parts.rsi
@@ -104,7 +104,7 @@
   id: LizardHornsShort
   bodyPart: HeadTop
   markingCategory: HeadTop
-  sponsorOnly: true
+  sponsorOnly: false
   speciesRestriction: [Reptilian]
   sprites:
   - sprite: Mobs/Customization/reptilian_parts.rsi
@@ -114,7 +114,7 @@
   id: LizardHornsSimple
   bodyPart: HeadTop
   markingCategory: HeadTop
-  sponsorOnly: true
+  sponsorOnly: false
   speciesRestriction: [Reptilian]
   sprites:
   - sprite: Mobs/Customization/reptilian_parts.rsi
@@ -124,7 +124,7 @@
   id: LizardHornsDouble
   bodyPart: HeadTop
   markingCategory: HeadTop
-  sponsorOnly: true
+  sponsorOnly: false
   speciesRestriction: [Reptilian]
   sprites:
   - sprite: Mobs/Customization/reptilian_parts.rsi
@@ -134,7 +134,7 @@
   id: LizardTailSmooth
   bodyPart: Tail
   markingCategory: Tail
-  sponsorOnly: true
+  sponsorOnly: false
   speciesRestriction: [Reptilian]
   sprites:
   - sprite: Mobs/Customization/reptilian_parts.rsi
@@ -146,7 +146,7 @@
   id: LizardTailLarge
   bodyPart: Tail
   markingCategory: Tail
-  sponsorOnly: true
+  sponsorOnly: false
   speciesRestriction: [Reptilian]
   sprites:
   - sprite: Mobs/Customization/reptilian_parts.rsi
@@ -156,7 +156,7 @@
   id: LizardTailSpikes
   bodyPart: Tail
   markingCategory: Tail
-  sponsorOnly: true
+  sponsorOnly: false
   speciesRestriction: [Reptilian]
   sprites:
   - sprite: Mobs/Customization/reptilian_parts.rsi
@@ -166,7 +166,7 @@
   id: LizardTailLTiger
   bodyPart: Tail
   markingCategory: Tail
-  sponsorOnly: true
+  sponsorOnly: false
   speciesRestriction: [Reptilian]
   sprites:
   - sprite: Mobs/Customization/reptilian_parts.rsi
@@ -176,7 +176,7 @@
   id: LizardTailDTiger
   bodyPart: Tail
   markingCategory: Tail
-  sponsorOnly: true
+  sponsorOnly: false
   speciesRestriction: [Reptilian]
   sprites:
   - sprite: Mobs/Customization/reptilian_parts.rsi
@@ -186,7 +186,7 @@
   id: LizardSnoutRound
   bodyPart: Snout
   markingCategory: Snout
-  sponsorOnly: true
+  sponsorOnly: false
   forcedColoring: true
   speciesRestriction: [Reptilian]
   sprites:
@@ -197,7 +197,7 @@
   id: LizardSnoutSharp
   bodyPart: Snout
   markingCategory: Snout
-  sponsorOnly: true
+  sponsorOnly: false
   forcedColoring: true
   speciesRestriction: [Reptilian]
   sprites:
@@ -208,7 +208,7 @@
   id: LizardChestTiger
   bodyPart: Chest
   markingCategory: Chest
-  sponsorOnly: true
+  sponsorOnly: false
   speciesRestriction: [Reptilian]
   sprites:
   - sprite: Mobs/Customization/reptilian_parts.rsi
@@ -218,7 +218,7 @@
   id: LizardHeadTiger
   bodyPart: Head
   markingCategory: Head
-  sponsorOnly: true
+  sponsorOnly: false
   speciesRestriction: [Reptilian]
   sprites:
   - sprite: Mobs/Customization/reptilian_parts.rsi
@@ -228,7 +228,7 @@
   id: LizardLArmTiger
   bodyPart: LArm
   markingCategory: Arms
-  sponsorOnly: true
+  sponsorOnly: false
   speciesRestriction: [Reptilian]
   sprites:
   - sprite: Mobs/Customization/reptilian_parts.rsi
@@ -238,7 +238,7 @@
   id: LizardLLegTiger
   bodyPart: LLeg
   markingCategory: Legs
-  sponsorOnly: true
+  sponsorOnly: false
   speciesRestriction: [Reptilian]
   sprites:
   - sprite: Mobs/Customization/reptilian_parts.rsi
@@ -248,7 +248,7 @@
   id: LizardRArmTiger
   bodyPart: RArm
   markingCategory: Arms
-  sponsorOnly: true
+  sponsorOnly: false
   speciesRestriction: [Reptilian]
   sprites:
   - sprite: Mobs/Customization/reptilian_parts.rsi
@@ -258,7 +258,7 @@
   id: LizardRLegTiger
   bodyPart: RLeg
   markingCategory: Legs
-  sponsorOnly: true
+  sponsorOnly: false
   speciesRestriction: [Reptilian]
   sprites:
   - sprite: Mobs/Customization/reptilian_parts.rsi
@@ -268,7 +268,7 @@
   id: LizardHornsArgali
   bodyPart: HeadTop
   markingCategory: HeadTop
-  sponsorOnly: true
+  sponsorOnly: false
   speciesRestriction: [Reptilian]
   sprites:
   - sprite: Mobs/Customization/reptilian_parts.rsi
@@ -278,7 +278,7 @@
   id: LizardHornsAyrshire
   bodyPart: HeadTop
   markingCategory: HeadTop
-  sponsorOnly: true
+  sponsorOnly: false
   speciesRestriction: [Reptilian]
   sprites:
   - sprite: Mobs/Customization/reptilian_parts.rsi
@@ -288,7 +288,7 @@
   id: LizardHornsMyrsore
   bodyPart: HeadTop
   markingCategory: HeadTop
-  sponsorOnly: true
+  sponsorOnly: false
   speciesRestriction: [Reptilian]
   sprites:
   - sprite: Mobs/Customization/reptilian_parts.rsi
@@ -298,7 +298,7 @@
   id: LizardHornsBighorn
   bodyPart: HeadTop
   markingCategory: HeadTop
-  sponsorOnly: true
+  sponsorOnly: false
   speciesRestriction: [Reptilian]
   sprites:
   - sprite: Mobs/Customization/reptilian_parts.rsi
@@ -308,7 +308,7 @@
   id: LizardHornsKoboldEars
   bodyPart: HeadTop
   markingCategory: HeadTop
-  sponsorOnly: true
+  sponsorOnly: false
   speciesRestriction: [Reptilian]
   sprites:
   - sprite: Mobs/Customization/reptilian_parts.rsi
@@ -318,7 +318,7 @@
   id: LizardHornsFloppyKoboldEars
   bodyPart: HeadSide
   markingCategory: HeadSide
-  sponsorOnly: true
+  sponsorOnly: false
   speciesRestriction: [Reptilian]
   sprites:
   - sprite: Mobs/Customization/reptilian_parts.rsi
@@ -328,7 +328,7 @@
   id: LizardChestUnderbelly
   bodyPart: Chest
   markingCategory: Chest
-  sponsorOnly: true
+  sponsorOnly: false
   speciesRestriction: [Reptilian]
   sprites:
   - sprite: Mobs/Customization/reptilian_parts.rsi
@@ -338,7 +338,7 @@
   id: LizardChestBackspikes
   bodyPart: Chest
   markingCategory: Chest
-  sponsorOnly: true
+  sponsorOnly: false
   speciesRestriction: [Reptilian]
   sprites:
   - sprite: Mobs/Customization/reptilian_parts.rsi
@@ -349,7 +349,7 @@
   id: LizardTailSmoothAnimated
   bodyPart: Tail
   markingCategory: Tail
-  sponsorOnly: true
+  sponsorOnly: false
   speciesRestriction: []
   sprites:
     - sprite: Mobs/Customization/reptilian_parts.rsi
@@ -361,7 +361,7 @@
   id: LizardTailSpikesAnimated
   bodyPart: Tail
   markingCategory: Tail
-  sponsorOnly: true
+  sponsorOnly: false
   speciesRestriction: []
   sprites:
     - sprite: Mobs/Customization/reptilian_parts.rsi
@@ -371,7 +371,7 @@
   id: LizardTailLTigerAnimated
   bodyPart: Tail
   markingCategory: Tail
-  sponsorOnly: true
+  sponsorOnly: false
   speciesRestriction: []
   sprites:
     - sprite: Mobs/Customization/reptilian_parts.rsi
@@ -381,7 +381,7 @@
   id: LizardTailDTigerAnimated
   bodyPart: Tail
   markingCategory: Tail
-  sponsorOnly: true
+  sponsorOnly: false
   speciesRestriction: []
   sprites:
     - sprite: Mobs/Customization/reptilian_parts.rsi
