--- a/Resources/Prototypes/_evgencheg/sponsor_cloth.yml
+++ b/Resources/Prototypes/_evgencheg/sponsor_cloth.yml
@@ -2,8 +2,8 @@
 - type: entity
   parent: ClothingOuterBase
   id: ClothingOuterAtmosianBomberJacket
-  name: atmosian bomber jacket
-  description: A thick, well-worn atmosian leather bomber jacket.
+  name: куртка-бомбер атмоса
+  description: Толстая, поношенная кожаная куртка-бомбер атмоса.
   suffix: Sponsor
   components:
     - type: Sprite
@@ -14,8 +14,8 @@
 - type: entity
   parent: ClothingMaskGas
   id: ClothingMaskGasAtmosian
-  name: atmosian gas mask
-  description: Improved gas mask utilized by atmospheric technicians. It's flameproof!
+  name: противогаз атмоса
+  description: Усовершенствованный противогаз, используемый специалистами по атмосферным воздействиям. Он огнестойкий!
   suffix: Sponsor
   components:
     - type: Sprite
@@ -30,8 +30,8 @@
 - type: entity
   parent: ClothingNeckBase
   id: ClothingCloakAtmosian
-  name: atmosian's cloak
-  description: The cloak of a legendary Atmosian.
+  name: плащ
+  description: Плащ легендарного атмоса
   suffix: Sponsor
   components:
     - type: Sprite
@@ -41,8 +41,8 @@
 - type: entity
   parent: ClothingMaskBase
   id: ClothingMaskSkull
-  name: skull mask
-  description: Spooky skull mask.
+  name: маска скелета
+  description: Страшно
   suffix: Sponsor
   components:
     - type: Sprite
@@ -54,8 +54,8 @@
 - type: entity
   parent: ClothingNeckBase
   id: ClothingCloakGamer
-  name: legendary gamer's cloak
-  description: Worn by the most skilled professional gamers.
+  name: плащ геймера
+  description: Носят самые опытные профессиональные геймеры.
   suffix: Sponsor
   components:
     - type: Sprite
@@ -64,8 +64,8 @@
 - type: entity
   parent: ClothingUniformBase
   id: ClothingUniformJumpsuitSkeleton
-  name: skeleton jumpsuit
-  description: A black jumpsuit with a white bone pattern printed on it. Spooky!
+  name: комбинезон скелета
+  description: Черный комбинезон с рисунком в виде белой кости. Жутковато!
   suffix: Sponsor
   components:
     - type: Sprite
@@ -77,8 +77,8 @@
 - type: entity
   parent: ClothingBackpackSatchel
   id: ClothingBackpackSatchelHoS
-  name: head of security's satchel
-  description: Stylish, leather black satchel
+  name: сумка начальника службы безопасности
+  description: Стильная кожаная сумка черного цвета
   suffix: Sponsor
   components:
     - type: Sprite
@@ -87,8 +87,8 @@
 - type: entity
   parent: ClothingBeltStorageBase
   id: ClothingBeltHoS
-  name: leather security belt
-  description: Stylish, leather black belt
+  name: кожаный ремень безопасности
+  description: Стильный кожаный черный ремень
   suffix: Sponsor
   components:
     - type: Sprite
@@ -123,8 +123,8 @@
 - type: entity
   parent: ClothingHandsBase
   id: ClothingHandsGlovesLeatherHoS
-  name: leather gloves
-  description: Stylish, black leather gloves
+  name: кожаные перчатки
+  description: Стильные черные кожаные перчатки
   suffix: Sponsor
   components:
     - type: Sprite
@@ -135,8 +135,8 @@
 - type: entity
   parent: ClothingHeadBase
   id: ClothingHeadHatCapLeatherHoS
-  name: leather head of security's cap
-  description: Pretty old stuff for these times, bringing back old memories...
+  name: кожаная фуражка начальника охраны
+  description: Довольно старая штука для наших времен, навевающая старые воспоминания...
   suffix: Sponsor
   components:
     - type: Sprite
@@ -147,8 +147,8 @@
 - type: entity
   parent: ClothingOuterStorageBase
   id: ClothingOuterCoatHoSOvercoat
-  name: armored overcoat
-  description: Pretty old stuff for these times, bringing back old memories...
+  name: бронированное пальто
+  description: Довольно старая штука для наших времен, навевающая старые воспоминания...
   suffix: Sponsor
   components:
     - type: Sprite
@@ -166,8 +166,8 @@
 - type: entity
   parent: ClothingUniformBase
   id: ClothingUniformJumpsuitHoSOld
-  name: old head of security's jumpsuit
-  description: Pretty old stuff for these times, bringing back old memories...
+  name: старый комбинезон начальника службы безопасности
+  description: Довольно старая штука для наших времен, навевающая старые воспоминания...
   suffix: Sponsor
   components:
     - type: Sprite
@@ -179,8 +179,8 @@
 - type: entity
   parent: ClothingHandsBase
   id: ClothingHandsWatchDivine
-  name: divine watches
-  description: This watch can only be worn by a divine person
+  name: божественные часы
+  description: Эти часы может носить только божественный человек
   components:
     - type: Sprite
       sprite: Corvax/Clothing/Hands/Accessories/watch.rsi
@@ -209,8 +209,8 @@
 - type: entity
   parent: ClothingHandsBase
   id: ClothingHandsGlovesLeatherUSSPBlack
-  name: old ussp leather gloves
-  description: Black leather gloves from USSP
+  name: старые кожаные перчатки СССП
+  description: Черные кожаные перчатки СССП
   suffix: Sponsor
   components:
     - type: Sprite
@@ -221,8 +221,8 @@
 - type: entity
   parent: ClothingHeadBase
   id: ClothingHeadHatCapUSSPBlack
-  name: old ussp leather cap
-  description: Pretty old stuff from USSP
+  name: старая кожаная кепка СССП
+  description: Черная кожаная кепка СССП
   suffix: Sponsor
   components:
     - type: Sprite
@@ -233,8 +233,8 @@
 - type: entity
   parent: ClothingOuterStorageBase
   id: ClothingOuterCoatUSSPOvercoatBlack
-  name: old ussp armored overcoat
-  description: Pretty old stuff from USSP
+  name: старое бронированное пальто СССП
+  description: Бронированное пальто СССП
   suffix: Sponsor
   components:
     - type: Sprite
@@ -245,8 +245,8 @@
 - type: entity
   parent: ClothingUniformBase
   id: ClothingUniformJumpsuitUSSPBlack
-  name: old ussp jumpsuit
-  description: Pretty old stuff from USSP
+  name: старый комбинезон СССП
+  description: Стильный комбинезон из СССП
   suffix: Sponsor
   components:
     - type: Sprite
@@ -257,8 +257,8 @@
 - type: entity
   parent: ClothingShoesBaseButcherable
   id: ClothingShoesUSSPBlack
-  name: old ussp boots
-  description: Pretty old stuff from USSP
+  name: старые ботинки СССП
+  description: Чёрные ботинки
   suffix: Sponsor
   components:
     - type: Sprite
