update donate items translations
Signed-off-by: c4llv07e <kseandi@gmail.com>

--- a/Resources/Prototypes/_evgencheg/sponsor_cloth.yml
+++ b/Resources/Prototypes/_evgencheg/sponsor_cloth.yml
@@ -15,7 +15,7 @@
   parent: ClothingMaskGas
   id: ClothingMaskGasAtmosian
   name: противогаз атмоса
-  description: Усовершенствованный противогаз, используемый специалистами по атмосферным воздействиям. Он огнестойкий!
+  description: Усовершенствованный противогаз, используемый атмосферными техниками. Он огнестойкий!
   suffix: Sponsor
   components:
     - type: Sprite
