--- a/Resources/Prototypes/_evgencheg/sponsor_uplink.yml
+++ b/Resources/Prototypes/_evgencheg/sponsor_uplink.yml
@@ -1,5 +1,5 @@
 - type: entity
-  name: бананорубль
+  name: бананарубли
   parent: BaseItem
   id: DonateCrystal
   suffix: 20 BR
@@ -24,7 +24,7 @@
 - type: entity
   parent: DonateCrystal
   id: DonateCrystal1
-  name: бананорубль
+  name: бананорубли
   suffix: 1
   components:
   - type: Stack
