fix sponsor traslation
Signed-off-by: c4llv07e <kseandi@gmail.com>

--- a/Resources/Prototypes/_evgencheg/sponsor_cloth.yml
+++ b/Resources/Prototypes/_evgencheg/sponsor_cloth.yml
@@ -30,7 +30,7 @@
 - type: entity
   parent: ClothingNeckBase
   id: ClothingCloakAtmosian
-  name: плащ
+  name: плащ атмоса
   description: Плащ легендарного атмоса
   suffix: Sponsor
   components:
