--- a/Resources/Prototypes/Traits/neutral.yml
+++ b/Resources/Prototypes/Traits/neutral.yml
@@ -14,5 +14,6 @@
     removes:
     - type: LizardAccent
     - type: MothAccent
+    - type: OwOAccent
     - type: ReplacementAccent
       accent: dwarf
