Return Detective to Security (#25986)
* Revert "detective patch (#24739)"

This reverts commit 8ef69ff2e1f83b08c9585d2517e917075c8271cf.

* Revert "Detectives gain independency (#23114)"

This reverts commit 807f5facbbc4a9e646e9f8257a42412841a5340f.

--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -166,10 +166,10 @@ ClothingHeadHelmetVoidParamed: null
 # 2024-01-19
 DefaultStationBeaconTeslaEngine: null
 
-#2024-01-27
-ClothingBackpackSecurityFilledDetective: ClothingBackpackFilledDetective
-ClothingBackpackDuffelSecurityFilledDetective: ClothingBackpackDuffelFilledDetective
-ClothingBackpackSatchelSecurityFilledDetective: ClothingBackpackSatchelFilledDetective
+# 2024-01-27 (Reverted on 2024-03-10)
+# ClothingBackpackSecurityFilledDetective: ClothingBackpackFilledDetective
+# ClothingBackpackDuffelSecurityFilledDetective: ClothingBackpackDuffelFilledDetective
+# ClothingBackpackSatchelSecurityFilledDetective: ClothingBackpackSatchelFilledDetective
 
 # 2024-01-28
 FoodBoxDonkpocketGondola: FoodBoxDonkpocketPizza
@@ -236,3 +236,8 @@ AirlockExternalEasyPryLocked: AirlockExternalLocked
 AirlockExternalGlassEasyPryLocked: AirlockExternalGlassLocked
 AirlockGlassShuttleEasyPryLocked: AirlockExternalGlassShuttleLocked
 AirlockShuttleEasyPryLocked: AirlockExternalShuttleLocked
+
+#2024-03-10
+ClothingBackpackFilledDetective: ClothingBackpackSecurityFilledDetective
+ClothingBackpackDuffelFilledDetective: ClothingBackpackDuffelSecurityFilledDetective
+ClothingBackpackSatchelFilledDetective: ClothingBackpackSatchelSecurityFilledDetective
