--- a/Resources/Prototypes/_evgencheg/sponsor_uplink.yml
+++ b/Resources/Prototypes/_evgencheg/sponsor_uplink.yml
@@ -1,5 +1,5 @@
 - type: entity
-  name: бананарубли
+  name: адвенчурценты
   parent: BaseItem
   id: DonateCrystal
   suffix: 20 BR
@@ -24,7 +24,7 @@
 - type: entity
   parent: DonateCrystal
   id: DonateCrystal1
-  name: бананорубли
+  name: адвенчурценты
   suffix: 1
   components:
   - type: Stack
@@ -32,7 +32,7 @@
 
 - type: currency
   id: DonateCrystal
-  displayName: бананорубли
+  displayName: адвенчурценты
   cash:
     1: DonateCrystal1
   canWithdraw: true
@@ -53,7 +53,7 @@
   id: UplinkSponsorCloth2
   productEntity: ClothingCloakAtmosian
   cost:
-    DonateCrystal: 4
+    DonateCrystal: 5
   categories:
   - SponsorThings
 
@@ -61,7 +61,7 @@
   id: UplinkSponsorCloth3
   productEntity: ClothingCloakGamer
   cost:
-    DonateCrystal: 6
+    DonateCrystal: 7
   categories:
   - SponsorThings
 
@@ -133,7 +133,7 @@
 - type: entity
   parent: BaseItem
   id: DonateUplink
-  name: хонкомаз
+  name: анденчурплинк
   suffix: 30
   components:
   - type: Sprite
