update map pool
Signed-off-by: c4llv07e <kseandi@gmail.com>

--- a/Resources/Prototypes/Adventure/Maps/Pools/Adventure.yml
+++ b/Resources/Prototypes/Adventure/Maps/Pools/Adventure.yml
@@ -1,17 +1,26 @@
 - type: gameMapPool
   id: AdventureMapPool
   maps:
-  - CorvaxAvrite
-  - CorvaxDelta
-  - CorvaxGate
-  - CorvaxSpectrum
-  - CorvaxSilly
+  - Atlas
   - Bagel
   - Box
   - Cluster
+  - Core
+  - CorvaxAstra
+  - CorvaxAvrite
+  - CorvaxDelta
+  - CorvaxGate
+  - CorvaxMaus
+  - CorvaxOutpost
+  - CorvaxSilly
+  - CorvaxSpectrum
+  - CorvaxSilly
   - Fland
+  - Marathon
   - Meta
   - Omega
-  - Atlas
+  - Origin
   - Reach
+  - Saltern
   - Starquest
+  - Train
