temporary disable sponsor uplink loadout because of the errors (Женя, оно не работает, и я не знаю, почему. Жалуется на прототип loadout, хотя в коде он точно есть. Если этому коммиту больше, скажем, 15-и часов, а это всё ещё не исправленно, пинайте меня)
Signed-off-by: c4llv07e <kseandi@gmail.com>

--- a/Resources/Prototypes/_evgencheg/sponsor_loadouts.yml
+++ b/Resources/Prototypes/_evgencheg/sponsor_loadouts.yml
@@ -1,5 +1,9 @@
-﻿- type: loadout
-  id: BaseAdvenUplinkLoadout
-  entity: DonateUplink
-  sponsorOnly: true
-  whitelistJobs: [Visitor, ServiceWorker, Musician, Mime, Librarian, Lawyer, Janitor, Detective, Clown, Chef, Chaplain, Botanist, Bartender, Passenger, Warden, SecurityOfficer, SecurityCadet, HeadOfSecurity, Scientist, HeadOfSecurity, ResearchDirector, Paramedic, ResearchAssistant, MedicalDoctor, ChiefMedicalOfficer, Chemist, TechnicalAssistant, StationEngineer, ChiefEngineer, IAA, CargoTechnician, Quartermaster, SalvageSpecialist, Captain, HeadOfPersonnel, AtmosphericTechnician]
+# Оно ругается на прототип, хотя в других файлах он есть.
+# Я хз, почему это так, но я пока не буду это включать, т.к.
+# всё равно работать не будет (C) c4llv07e
+
+# ﻿- type: loadout
+#   id: BaseAdvenUplinkLoadout
+#   entity: DonateUplink
+#   sponsorOnly: true
+#   whitelistJobs: [Visitor, ServiceWorker, Musician, Mime, Librarian, Lawyer, Janitor, Detective, Clown, Chef, Chaplain, Botanist, Bartender, Passenger, Warden, SecurityOfficer, SecurityCadet, HeadOfSecurity, Scientist, HeadOfSecurity, ResearchDirector, Paramedic, ResearchAssistant, MedicalDoctor, ChiefMedicalOfficer, Chemist, TechnicalAssistant, StationEngineer, ChiefEngineer, IAA, CargoTechnician, Quartermaster, SalvageSpecialist, Captain, HeadOfPersonnel, AtmosphericTechnician]
