--- a/Resources/Prototypes/_evgencheg/sponsor_uplink.yml
+++ b/Resources/Prototypes/_evgencheg/sponsor_uplink.yml
@@ -133,7 +133,7 @@
 - type: entity
   parent: BaseItem
   id: DonateUplink
-  name: анденчурплинк
+  name: адвенчурплинк
   suffix: 30
   components:
   - type: Sprite
