Revert "fix corvax loadout prototype"
This reverts commit ba1b9c74adb9c69f8a3ccdc8321f9b4781f909a3.

--- a/Resources/Prototypes/_evgencheg/sponsor_uplink.yml
+++ b/Resources/Prototypes/_evgencheg/sponsor_uplink.yml
@@ -66,6 +66,14 @@
   - SponsorThings
 
 - type: listing
+  id: UplinkSponsorCloth4
+  productEntity: ClothingOuterCoatHoSOvercoat
+  cost:
+    DonateCrystal: 5
+  categories:
+  - SponsorThings
+
+- type: listing
   id: UplinkSponsorCloth5
   productEntity: ClothingOuterCoatUSSPOvercoatBlack
   cost:
