Update pai.yml (#61)
* Update pai.yml

* Update slimes.yml

* Update borg_chassis.yml

* Update base_borg_chassis.yml

* Update borg_chassis.yml

* Update base_borg_chassis.yml

* Update pai.yml

--- a/Resources/Prototypes/Entities/Mobs/Cyborgs/base_borg_chassis.yml
+++ b/Resources/Prototypes/Entities/Mobs/Cyborgs/base_borg_chassis.yml
@@ -210,7 +210,7 @@
     guides:
       - Cyborgs
   - type: TTS # Corvax-TTS
-    voice: Glados
+    voice: glados
 
 - type: entity
   id: BaseBorgChassisNT
