--- a/Resources/Prototypes/Entities/Mobs/Cyborgs/borg_chassis.yml
+++ b/Resources/Prototypes/Entities/Mobs/Cyborgs/borg_chassis.yml
@@ -221,7 +221,7 @@
   - type: Inventory
     templateId: borgDutch
   - type: TTS # Corvax-TTS
-    voice: Glados
+    voice: glados
 
 - type: entity
   id: BorgChassisService
