--- a/Resources/Prototypes/Entities/Objects/Specific/Janitorial/janitor.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Janitorial/janitor.yml
@@ -11,6 +11,10 @@
     damage:
       types:
         Blunt: 10
+  - type: Clothing
+    quickEquip: false
+    slots:
+    - back
   - type: Spillable
     solution: absorbed
   - type: Wieldable
@@ -56,6 +60,10 @@
       damage:
         types:
           Blunt: 5
+    - type: Clothing
+      quickEquip: false
+      slots:
+      - back
     - type: Item
       size: Large
       sprite: Objects/Specific/Janitorial/advmop.rsi
