--- a/Resources/Prototypes/Corvax/Maps/avrite.yml
+++ b/Resources/Prototypes/Corvax/Maps/avrite.yml
@@ -11,7 +11,12 @@
           mapNameTemplate: '{0} Avrite {1}'
           nameGenerator:
             !type:NanotrasenNameGenerator
-            prefixCreator: 'TG'
+            prefixCreator: 'SY'
+        - type: GridSpawn
+          groups:
+            mining:
+              paths:
+              - /Maps/Shuttles/mining_corvaxavrit.yml
         - type: StationEmergencyShuttle
           emergencyShuttlePath: /Maps/Shuttles/emergency_corvaxavrit.yml
         - type: StationJobs
@@ -28,7 +33,7 @@
             Mime: [ 1, 1 ]
             Captain: [ 1, 1 ]
             IAA: [ 1, 1 ]
-            Reporter: [ 2, 2 ]
+            Reporter: [ 1, 2 ]
             HeadOfPersonnel: [ 1, 1 ]
             ChiefEngineer: [ 1, 1 ]
             StationEngineer: [ 4, 4 ]
