IC contraband and staff knowledge of the items (#1767)
Co-authored-by: Kit0vras <123590995+Kit0vras@users.noreply.github.com>
Co-authored-by: Morb <14136326+Morb0@users.noreply.github.com>

--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
@@ -1419,6 +1419,19 @@
   - type: Tag
     tags:
     - Fruit # It's in the name
+# Corvax-HiddenDesc-Start
+  - type: HiddenDescription
+    entries:
+    - label: corvax-hidden-desc-Gatfruit-syndicate
+      whitelistMind:
+        components:
+          - TraitorRole
+          - NukeOperative
+    - label: corvax-hidden-desc-Gatfruit-botanist
+      jobRequired:
+        - Botanist
+        - Borg
+# Corvax-HiddenDesc-End
 
 - type: entity
   name: rice bushel
