fix build errors
Change access levels from the string type to the access level prototype

Remove battle syringe's component SolutionInjectOnCollide in favour of
SolutionInjectOnEmbed

--- a/Resources/Prototypes/Adventure/Entities/Objects/syringegun.yml
+++ b/Resources/Prototypes/Adventure/Entities/Objects/syringegun.yml
@@ -44,10 +44,9 @@
     solution: injector
   - type: ExaminableSolution
     solution: injector
-  - type: SolutionInjectOnCollide
+  - type: SolutionInjectOnEmbed
     transferAmount: 8
-    fixtureId: "throw-fixture"
-    blockSlots: NONE
+    solution: injector
   - type: MeleeChemicalInjector
     solution: injector
   - type: TrashOnSolutionEmpty
