--- a/Resources/Prototypes/Corvax/Maps/split.yml
+++ b/Resources/Prototypes/Corvax/Maps/split.yml
@@ -112,7 +112,8 @@
             HeadOfSecurity: [ 1, 1 ]
             Warden: [ 1, 1 ]
             Detective: [ 1, 1 ]
-            SecurityOfficer: [ 4, 4 ]
+            Pilot: [ 2, 2]
+            SecurityOfficer: [ 3, 3 ]
             SecurityCadet: [ 2, 3 ]
             # cargo
             SalvageSpecialist: [ 1, 1 ]
