Plasma weapons recipe

--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -714,6 +714,10 @@
       - ShuttleGunPerforatorCircuitboard
       - ShuttleGunFriendshipCircuitboard
       - ShuttleGunDusterCircuitboard
+      - WeaponPlasmaGunPrint #PlasmaWeapons
+      - PlasmaMagazinPrint #PlasmaWeapons
+      - WeaponPlasmaSniperPrint #PlasmaWeapons
+      - PlasmaSniperMagazinPrint #PlasmaWeapons
   - type: MaterialStorage
     whitelist:
       tags:
