Fix lazy plants wasn't mutating.

--- a/Resources/Prototypes/Hydroponics/seeds.yml
+++ b/Resources/Prototypes/Hydroponics/seeds.yml
@@ -258,6 +258,8 @@
   packetPrototype: OrangeSeeds
   productPrototypes:
     - FoodOrange
+  mutationPrototypes:
+    - clockworkorange
   harvestRepeat: Repeat
   lifespan: 55
   maturation: 6
@@ -366,6 +368,7 @@
     - Log
   mutationPrototypes:
     - steelcap
+    - glasscap
   lifespan: 80
   maturation: 15
   ligneous: true
@@ -958,6 +961,8 @@
   packetPrototype: AloeSeeds
   productPrototypes:
     - FoodAloe
+  mutationPrototypes:
+    - blueagava
   lifespan: 25
   maturation: 10
   production: 3
